--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
         <span class="refresh"></span>
         <span class="serach"></span>
         <span class="tile"></span>
+        <span class="close"></span>
+        <span class="add"></span>
     </div>
 </body>
 </html>
