--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <span class="refresh"></span>
         <span class="serach"></span>
         <span class="tile"></span>
+        <span class="star"></span>
     </div>
 </body>
 </html>
